# gagguino2

./: .gitignore  gagguino2.code-workspace
.github/workflows/: bump-version.yml
firmware/controller/: README.md  platformio.ini  tmp_out.txt
firmware/controller/include/: sdkconfig.h
firmware/controller/src/: gagguino.cpp  gagguino.h
firmware/display/: .gitignore  CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1
firmware/display/src/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  secrets.h.example.h
firmware/display/src/Battery/: Battery.c  Battery.h
firmware/display/src/EXIO/: TCA9554PWR.c
firmware/display/src/LCD_Driver/: ST7701S.c  ST7701S.h
firmware/display/src/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
firmware/display/src/LVGL_UI/: LVGL_Example.c  LVGL_Example.h  LVGL_UI.c  LVGL_UI.h
firmware/display/src/SD_Card/: SD_MMC.c
firmware/display/src/Touch_Driver/: CST820.c  CST820.h
firmware/display/src/WebServer/: BrewProfileStore.c  BrewProfileStore.h  WebServer.c  WebServer.h
firmware/display/src/Wireless/: EspNowPacket.h  Wireless.c  Wireless.h
firmware/display/src/fonts/: icon_defs.h  mdi_28.c  mdi_40.c  mdi_icons_24.c  mdi_icons_24.h  mdi_icons_32.h  mdi_icons_40.c  mdi_icons_40.h  mdi_icons_80.c  mdi_icons_80.h
firmware/secrets/include/: secrets.example.h
firmware/shared/: mqtt_spec.md
firmware/shared/include/: brew_profile.h  espnow_protocol.h  gag_constants.h  mqtt_topics.h  version.h
